Fix design for login page & some changes

--- a/cp2020/templates/base.html.twig
+++ b/cp2020/templates/base.html.twig
@@ -98,7 +98,7 @@
                 {% block subheader %}{% endblock %}
 
                 <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
-                    <div class="d-flex flex-column-fluid mt-4">
+                    <div class="d-flex flex-column-fluid">
                         {% block body %}{% endblock %}
                     </div>
                 </div>
