--- a/cp2020/templates/registration/register.html.twig
+++ b/cp2020/templates/registration/register.html.twig
@@ -20,8 +20,8 @@
                     <div class="login-form login-signin py-11">
                         <form class="form" novalidate="novalidate" id="kt_login_signup_form" method="post">
                             <div class="text-center pb-8">
-                                <h2 class="font-weight-bolder text-dark font-size-h2 font-size-h1-lg">Регистрация</h2>
-                                <p class="text-muted font-weight-bold font-size-h4">Заполните некоторые поля для ввода</p>
+                                <h2 class="font-weight-bolder text-dark font-size-h2 font-size-h1-lg">Зарегистрируйтесь</h2>
+                                <span class="text-muted font-weight-bold font-size-h4">или <a href="{{ path('app_login') }}" class="text-primary font-weight-bolder">авторизуйтесь</a></span>
                             </div>
 
                             {% for child in registrationForm.children %}
