--- a/cp2020/templates/admin/vacancy/index.html.twig
+++ b/cp2020/templates/admin/vacancy/index.html.twig
@@ -37,6 +37,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block bosy %}
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
