--- a/cp2020/templates/hirer/company/show.html.twig
+++ b/cp2020/templates/hirer/company/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Компания {{ company.title }}{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container mt-6">
     <div class="card card-custom gutter-b">
         <div class="card-body">
             <div class="d-flex">
