--- a/cp2020/templates/hirer/resume/show.html.twig
+++ b/cp2020/templates/hirer/resume/show.html.twig
@@ -1,1 +1,326 @@
-{{ user.id }}
+{% extends 'hirer/layout.html.twig' %}
+
+{% block title %}Просмотр резюме{% endblock %}
+
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class="container d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Просмотр резюме</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Работодатель</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Просмотр резюме</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block body %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-body">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0 mr-7">
+                                <div class="symbol symbol-50 symbol-lg-120">
+                                    <span class="font-size-h3 symbol-label font-weight-boldest">КП</span>
+                                </div>
+                            </div>
+
+                            <div class="flex-grow-1">
+                                <div class="d-flex align-items-center justify-content-between flex-wrap mt-2">
+                                    <div class="mr-3">
+                                        <a href="#" class="d-flex align-items-center text-dark text-hover-primary font-size-h5 font-weight-bold mr-3">
+                                            Куценко Павел 
+                                            <i class="flaticon2-correct text-success icon-md ml-2"></i>
+                                        </a>
+
+                                        <div class="d-flex flex-wrap my-2">
+                                            <a href="#" class="text-muted text-hover-primary font-weight-bold mr-lg-8 mr-5 mb-lg-0 mb-2">
+                                                <span class="svg-icon svg-icon-md svg-icon-gray-500 mr-1">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                            <rect x="0" y="0" width="24" height="24" />
+                                                            <path d="M21,12.0829584 C20.6747915,12.0283988 20.3407122,12 20,12 C16.6862915,12 14,14.6862915 14,18 C14,18.3407122 14.0283988,18.6747915 14.0829584,19 L5,19 C3.8954305,19 3,18.1045695 3,17 L3,8 C3,6.8954305 3.8954305,6 5,6 L19,6 C20.1045695,6 21,6.8954305 21,8 L21,12.0829584 Z M18.1444251,7.83964668 L12,11.1481833 L5.85557487,7.83964668 C5.4908718,7.6432681 5.03602525,7.77972206 4.83964668,8.14442513 C4.6432681,8.5091282 4.77972206,8.96397475 5.14442513,9.16035332 L11.6444251,12.6603533 C11.8664074,12.7798822 12.1335926,12.7798822 12.3555749,12.6603533 L18.8555749,9.16035332 C19.2202779,8.96397475 19.3567319,8.5091282 19.1603533,8.14442513 C18.9639747,7.77972206 18.5091282,7.6432681 18.1444251,7.83964668 Z" fill="#000000" />
+                                                            <circle fill="#000000" opacity="0.3" cx="19.5" cy="17.5" r="2.5" />
+                                                        </g>
+                                                    </svg>
+                                                </span>
+
+                                                zebartcoc@gmail.com
+                                            </a>
+                                            
+                                            <a href="#" class="text-muted text-hover-primary font-weight-bold">
+                                                <span class="svg-icon svg-icon-md svg-icon-gray-500 mr-1">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                            <rect x="0" y="0" width="24" height="24" />
+                                                            <path d="M9.82829464,16.6565893 C7.02541569,15.7427556 5,13.1079084 5,10 C5,6.13400675 8.13400675,3 12,3 C15.8659932,3 19,6.13400675 19,10 C19,13.1079084 16.9745843,15.7427556 14.1717054,16.6565893 L12,21 L9.82829464,16.6565893 Z M12,12 C13.1045695,12 14,11.1045695 14,10 C14,8.8954305 13.1045695,8 12,8 C10.8954305,8 10,8.8954305 10,10 C10,11.1045695 10.8954305,12 12,12 Z" fill="#000000" />
+                                                        </g>
+                                                    </svg>
+                                                </span> 
+                                                Кисловодск
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex align-items-center flex-wrap justify-content-between">
+                                    <div class="flex-grow-1 font-weight-bold text-dark-50 py-2 py-lg-2 mr-5">
+                                        FullStack разработчик. DevOps. Docker. Python. PHP. NodeJS
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="card-footer">
+                        <div class="d-flex align-items-center flex-wrap">
+                            <div class="d-flex align-items-center flex-lg-fill mr-5 my-1">
+                                <span class="mr-4">
+                                    <i class="flaticon-piggy-bank icon-2x text-muted font-weight-bold"></i>
+                                </span>
+                                <div class="d-flex flex-column text-dark-75">
+                                    <span class="font-weight-bolder font-size-sm">Зарплатные<br>ожидания до 1000$</span>
+                                </div>
+                            </div>
+
+                            <div class="d-flex align-items-center flex-lg-fill mr-5 my-1">
+                                <span class="mr-4">
+                                    <i class="flaticon-confetti icon-2x text-muted font-weight-bold"></i>
+                                </span>
+                                <div class="d-flex flex-column text-dark-75">
+                                    <span class="font-weight-bolder font-size-sm">Владеет несколькими <br> языками программирования</span>
+                                </div>
+                            </div>
+
+                            <div class="d-flex align-items-center flex-lg-fill mr-5 my-1">
+                                <span class="mr-4">
+                                    <i class="flaticon-file-2 icon-2x text-muted font-weight-bold"></i>
+                                </span>
+                                <div class="d-flex flex-column flex-lg-fill">
+                                    <span class="text-dark-75 font-weight-bolder font-size-sm">
+                                        12 подтвержденных <br> компетенций
+                                    </span>
+                                </div>
+                            </div>
+
+                            <div class="d-flex align-items-center flex-lg-fill mr-5 my-1">
+                                <span class="mr-4">
+                                    <i class="flaticon-chat-1 icon-2x text-muted font-weight-bold"></i>
+                                </span>
+                                <div class="d-flex flex-column">
+                                    <span class="text-dark-75 font-weight-bolder font-size-sm">
+                                        Дружелюбное общение. <br> Вежливость
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-header border-0">
+                        <h3 class="card-title font-weight-bolder">Актуальность резюме</h3>
+                    </div>
+
+                    <div class="card-body d-flex flex-column">
+                        <div class="flex-grow-1">
+                            <div id="kt_mixed_widget_14_chart" style="height: 200px"></div>
+                        </div>
+                        <div class="pt-5">
+                            <p class="text-center font-weight-normal font-size-lg pb-7">
+                                Студент подходит вам на 74% для вакансии <br> "Web Developer"
+                            </p>
+                            <a href="#" class="btn btn-primary btn-shadow-hover font-weight-bolder w-100 py-3">
+                                Отправить приглашение на собеседование
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-header border-0 pt-5">
+                        <h3 class="card-title align-items-start flex-column">
+                            <span class="card-label font-weight-bolder text-dark">
+                                Компетенции
+                            </span>
+                            <span class="text-muted mt-3 font-weight-bold font-size-sm">
+                                Компетенции подтверждает ВУЗ, поэтому вы можете доверять!
+                            </span>
+                        </h3>
+                    </div>
+
+                    <div class="card-body pt-3 pb-0">
+                        <div class="table-responsive">
+                            <table class="table table-borderless table-vertical-center">
+                                <thead>
+                                    <tr>
+                                        <th class="p-0" style="width: 50px"></th>
+                                        <th class="p-0" style="min-width: 200px"></th>
+                                        <th class="p-0" style="min-width: 100px"></th>
+                                        <th class="p-0" style="min-width: 125px"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="pl-0 py-4">
+                                            <div class="symbol symbol-50 symbol-light mr-1">
+                                                <span class="symbol-label">
+                                                    <span class="font-size-h3 symbol-label font-weight-boldest">1</span>
+                                                </span>
+                                            </div>
+                                        </td>
+
+                                        <td class="pl-0">
+                                            <a href="#" class="text-dark-75 font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                Тестирование ПО    
+                                            </a>
+                                        </td>
+
+                                        <td class="text-right">
+                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">
+                                                2020-09-25
+                                            </span>
+                                            <span class="text-muted font-weight-bold">
+                                                Дата получения
+                                            </span>
+                                        </td>
+                                        
+                                        <td class="text-right">
+                                            <span class="label label-lg label-light-primary label-inline">Подтвержден</span>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="pl-0 py-4">
+                                            <div class="symbol symbol-50 symbol-light mr-1">
+                                                <span class="symbol-label">
+                                                    <span class="font-size-h3 symbol-label font-weight-boldest">2</span>
+                                                </span>
+                                            </div>
+                                        </td>
+
+                                        <td class="pl-0">
+                                            <a href="#" class="text-dark-75 font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                HTML и CSS. Базовый курс    
+                                            </a>
+                                        </td>
+
+                                        <td class="text-right">
+                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">
+                                                2020-10-25
+                                            </span>
+                                            <span class="text-muted font-weight-bold">
+                                                Дата получения
+                                            </span>
+                                        </td>
+                                        
+                                        <td class="text-right">
+                                            <span class="label label-lg label-light-primary label-inline">Подтвержден</span>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="pl-0 py-4">
+                                            <div class="symbol symbol-50 symbol-light mr-1">
+                                                <span class="symbol-label">
+                                                    <span class="font-size-h3 symbol-label font-weight-boldest">3</span>
+                                                </span>
+                                            </div>
+                                        </td>
+
+                                        <td class="pl-0">
+                                            <a href="#" class="text-dark-75 font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                Hackaton WIN!  
+                                            </a>
+                                        </td>
+
+                                        <td class="text-right">
+                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">
+                                                2020-10-25
+                                            </span>
+                                            <span class="text-muted font-weight-bold">
+                                                Дата получения
+                                            </span>
+                                        </td>
+                                        
+                                        <td class="text-right">
+                                            <span class="label label-lg label-light-primary label-inline">Подтвержден</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-header h-auto border-0">
+                        <div class="card-title py-5">
+                            <h3 class="card-label">
+                                <span class="d-block text-dark font-weight-bolder">
+                                    Активность
+                                </span>
+                                <span class="d-block text-muted mt-2 font-size-sm">
+                                    Портал отслеживает все действия
+                                </span>
+                            </h3>
+                        </div>
+                        <div class="card-toolbar">
+                            <ul class="nav nav-pills nav-pills-sm nav-dark-75" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link py-2 px-4" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_1">
+                                        <span class="nav-text font-size-sm">Месяц</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link py-2 px-4" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_2">
+                                        <span class="nav-text font-size-sm">Неделя</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link py-2 px-4 active" data-toggle="tab"
+                                        href="#kt_charts_widget_2_chart_tab_3">
+                                        <span class="nav-text font-size-sm">День</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div id="kt_charts_widget_4_chart"></div>
+                    </div>
+                    <!--end::Body-->
+                </div>
+                <!--end::Charts Widget 4-->
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/assets/js/pages/widgets.js"></script>
+{% endblock %}
