--- a/cp2020/templates/base.html.twig
+++ b/cp2020/templates/base.html.twig
@@ -27,7 +27,7 @@
                         <div class="header-top">
                             <div class="container">
                                 <div class="d-none d-lg-flex align-items-center mr-3">
-                                    <a href="index.html" class="mr-20">
+                                    <a href="/" class="mr-20">
                                         <img alt="Logo" src="/assets/media/logos/logo.svg" class="max-h-40px" />
                                     </a>
 
