--- a/cp2020/templates/hirer/layout.html.twig
+++ b/cp2020/templates/hirer/layout.html.twig
@@ -7,25 +7,25 @@
                 <div id="kt_header_menu" class="header-menu header-menu-left header-menu-mobile  header-menu-layout-default ">
                     <ul class="menu-nav">
                         <li class="menu-item menu-item-rel">
-                            <a href="{{ path('skill_index') }}" class="menu-link">
+                            <a href="{{ path('resume_list') }}" class="menu-link">
                                 <span class="menu-text">Резюме</span>
                             </a>
                         </li>
 
                         <li class="menu-item menu-item-rel">
-                            <a href="{{ path('skill_index') }}" class="menu-link">
+                            <a href="#" class="menu-link">
                                 <span class="menu-text">Отклики</span>
                             </a>
                         </li>
 
                         <li class="menu-item menu-item-rel">
-                            <a href="{{ path('stage_index') }}" class="menu-link">
+                            <a href="{{ path('check_profile') }}" class="menu-link">
                                 <span class="menu-text">Компания</span>
                             </a>
                         </li>
 
                         <li class="menu-item menu-item-rel">
-                            <a href="{{ path('user_stage_progress_index') }}" class="menu-link">
+                            <a href="#" class="menu-link">
                                 <span class="menu-text">Настройки</span>
                             </a>
                         </li>
