--- a/cp2020/templates/hirer/hh/index.html.twig
+++ b/cp2020/templates/hirer/hh/index.html.twig
@@ -72,7 +72,7 @@
                         <span class="label label-lg label-primary label-inline">Опубликовано</span>
                     </td>
                     <td class="text-right pr-0">
-                        <a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm">
+                        <a href="{{ value.alternate_url }}" class="btn btn-icon btn-light btn-hover-primary btn-sm">
                                             <span class="svg-icon svg-icon-md svg-icon-primary">
                                                 <svg xmlns="http://www.w3.org/2000/svg"
                                                      xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
