added link to admin

--- a/cp2020/templates/base.html.twig
+++ b/cp2020/templates/base.html.twig
@@ -84,7 +84,7 @@
 
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <a class="dropdown-item" href="{{ path('check_profile') }}">Профиль</a>
-                                            <a class="dropdown-item" href="#">Настройки</a>
+                                            <a class="dropdown-item" href="{{ path('admin_index') }}">Админ-панель</a>
                                             <a class="dropdown-item" href="{{ path('app_logout') }}">Выйти</a>
                                         </div>
                                     </div>
