--- a/cp2020/templates/hirer/hh/index.html.twig
+++ b/cp2020/templates/hirer/hh/index.html.twig
@@ -1,4 +1,5 @@
 {% extends 'hirer/layout.html.twig' %}
+{% block title %}Вакансии с HH!{% endblock %}
 {% block body %}
 <div class="container mt-12">
 <div class="row">
